# bobstd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/bob_std/: c.py
src/bob_std/_impl/: c.py
src/bobstd/_impl/: c.py
tests/: conftest.py  test_c.py
