[project]
name = "bob-std"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Noam Zaks", email = "noam@noamzaks.com" }]
requires-python = ">=3.12"
dependencies = [
    "bob",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []

[tool.uv.sources]
bob = { git = "https://github.com/bob-hq/bob" }
