[project]
name = "bob-std"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Noam Zaks", email = "noam@noamzaks.com" }]
requires-python = ">=3.12"
dependencies = ["bob"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.uv.sources]
bob = { git = "https://github.com/bob-hq/bob" }

[tool.ruff.lint]
ignore = ["F403", "F405"]
