[project]
name = "bobstd"
version = "0.1.1"
description = "Unopinionated plugins for building common things with Bob."
readme = "README.md"
authors = [{ name = "Noam Zaks", email = "noam@noamzaks.com" }]
requires-python = ">=3.12"
dependencies = ["bob-build~=0.1.0"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]
